2008-05-04  Evan Monroig  <evan.monroig@gmail.com>

	* lapack-utils.lisp (def-lapack-method): add wrapper around method
	body to remove floating-point traps

	* lisp-matrix.asd (lisp-matrix): add new files

	* tests.lisp: moved tests from experimental/multiplication.lisp

	* lapack-methods.lisp (gemm): moved from
	experimental/multiplication.lisp

	* lapack-utils.lisp (make-predicate): moved from
	experimental/multiplication.lisp and renamed from
	BUILD-TEST-LAMBDA
	(with-copies, *supported-datatypes*, datatype->letter)
	(walk-and-replace, def-lapack-method, orientation->letter)
	(orientation-letter): moved from experimental/multiplication.lisp

	* fnv-matrix.lisp (transposed-p, zero-offset-p, copy-into, copy)
	(copy-into, copy-maybe, real-nrows, real-ncols): moved from
	experimental/multiplication.lisp

	* experimental/multiplication.lisp (with-copies): fixed bug in
	restoration
	(*supported-datatypes*): update to use same type names as in
	fnv-matrix.lisp
	(walk-and-replace, def-lapack-method): macro to create lapack
	wrapper methods, and a helper function
	(real-nrows, real-ncols): update documentation
	(gemm): defined using DEF-LAPACK-METHOD

	* fnv-matrix.lisp (window, strides): added argument checking
	(print-object): simple method to see the contents of matrices when
	they are returned in slime
	(fnv-type-to-matrix-type): rewrite as a CASE statement, and add
	:BASE keyword for the base class of the given fnv type

2008-05-03  Evan Monroig  <evan.monroig@gmail.com>

	* experimental/multiplication.lisp (m*): add test for
	multiplication
	(multiplication): test suite for this file
	(gemm): add and rewrite content from experimental/matview.lisp to
	allow implementation of lapack wrapper methods simultaneously for
	all matrix types and while avoiding unnecessary matrix copies --
	added sample GEMM method for the case of 'double matrices -- still
	to be debugged for windowed and strided views, and to add a macro
	to generate the GEMM methods for all matrix types
